# pellet

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
pellet/: middleware.py  pellet.py  utils.py
tests/: test_pellet.py
