[tool.poetry]
name = "pellet"
version = "0.1.0"
description = ""
authors = ["Harikrishnan Shaji <hihari777@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6"
rich = "12.5.1"

[tool.poetry.dev-dependencies]
Django = "4.0.6"
pre-commit = "2.20.0"
pytest = "7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
