[tool.poetry]
name = "pellet"
version = "0.1.3"
description = "Pellet helps improve your Django app performance by discovering N+1 queries"
authors = ["Harikrishnan Shaji <hihari777@gmail.com>"]
readme = "README.md"
license = "BSD-3-Clause"
homepage = "https://github.com/har777/pellet"
repository = "https://github.com/har777/pellet"
documentation = "https://github.com/har777/pellet"

keywords = ["django", "python", "performance", "database", "N+1"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "12.5.1"

[tool.poetry.dev-dependencies]
Django = "4.0.6"
pre-commit = "2.20.0"
pytest = "7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
